# CompressUp

./: .gitignore  CMakeLists.txt
bench/: advanced_bench.cpp  bench_main.cpp
changelog/: 2025-11-23-api-cli-tests-bench.md  2025-11-23-bench-csv.md  2025-11-23-core-lib.md  2025-11-23-doc-design.md  2025-11-23-initial.md  2025-11-25-major-expansion.md
doc/: design.md
src/: advanced_io.cpp  advanced_io.h  api.cpp  api.h  bwt_compressor.cpp  bwt_compressor.h  compressor.h  container.cpp  container.h  delta_compressor.cpp  delta_compressor.h  file_io.cpp  file_io.h  huffman_compressor.cpp  huffman_compressor.h  lz77_compressor.cpp  lz77_compressor.h  lzss_compressor.cpp  lzss_compressor.h  lzw_compressor.cpp  lzw_compressor.h  main.cpp  parallel_compressor.cpp  parallel_compressor.h  registry.cpp  registry.h  rle_compressor.cpp  rle_compressor.h  types.h
tests/: test_main.cpp
